# Shared-Editor

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  SharedEditor.desktop  install.sh  mockups-commentati_list.md  mockupsList  mockupsList.md  uninstall.sh
.github/workflows/: base.yaml  client.yaml  (+1 more)
cmake/: qt_libraries.cmake
docker/: Dockerfile_base  Dockerfile_client  Dockerfile_server  Dockerfile_stubClient
docs/: Class diagrams.md  ClientServerCommunication.md  GUI  GUI.md  Progetto.md  cmake.md  crdt.md  customCursor.md  esempioProcessamentoMsg.md  fileSystem.md
libs/: README.md
mockups/: mockups_list
mockups-commentati/: README.md  legenda.txt
prove/QtSQL/: CMakeLists.txt  main.cpp
prove/prova_pdf/: CMakeLists.txt  main.cpp
prove/prova_qtextedit_cursor/: CMakeLists.txt  Cursor.cpp  Cursor.h  TextEdit.cpp  TextEdit.h  main.cpp
prove/text_manager/: CMakeLists.txt  README.md  TextEdit.cpp  TextEdit.h  TextManager.cpp  TextManager.h  main.cpp
python-demo/: README.md  client_main.py  config.py  server_main.py
scripts/: build_all.sh  build_client.sh  build_server.sh  build_stubClient.sh  build_testClient.sh  run_client.sh  run_client_docker.sh  run_server.sh  run_server_docker.sh  run_stubClient_docker.sh
src/: CMakeLists.txt  FSElement.cpp  FSElement.h  FifoMap.h  File.cpp  File.h  Identifier.cpp  Identifier.h  Message.cpp  Message.h  NoBlockQueue.h  Paragraph.cpp  Paragraph.h  Queue.h  Symbol.cpp  Symbol.h  SymbolId.cpp  SymbolId.h  def.h  exceptions.h  exceptions2.h  message_parser.cpp  message_parser.h  message_processor.cpp  message_processor.h  run_server.sh  sets.cpp  sets.h  socket.cpp  socket.h  utils.cpp  utils.h
src/client/: CMakeLists.txt  MainThread.cpp  MainThread.h  SharedEditor.pro  SharedEditor.pro.user.fbe35d7  TextEdit.cpp  TextEdit.h  account.cpp  account.h  client_message_processor.cpp  client_message_processor.h  docsbrowser.cpp  docsbrowser.h  docsbrowser.ui  document.cpp  document.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message_manager.cpp  message_manager.h  prova_crdt.h  prova_file.h  prova_message.h  prova_textedit.h  record.cpp  record.h  record.ui  resources.qrc  server.cpp  server.h  sys.cpp  sys.h  texteditor.cpp  texteditor.h  texteditor.ui
src/client/gui/: CMakeLists.txt  alert_messages.cpp  alert_messages.h  declarations.h  gui_manager.cpp  gui_manager.h  image_utils.cpp  image_utils.h  main.cpp  main_window.cpp  main_window.h  stacked_widget.cpp  stacked_widget.h  user.cpp  user.h
src/client/gui/Application/: mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.cpp  manager.h
src/client/gui/account/: account.cpp  account.h
src/client/gui/browser/: docsbrowser.cpp  docsbrowser.h  docsbrowser.ui
src/client/gui/connect/: connect.cpp  connect.h
src/client/gui/dialogs/: confirm.cpp  confirm.h  file_info.cpp  file_info.h  find.cpp  find.h  icon_selector.cpp  icon_selector.h  info.cpp  info.h  input.cpp  input.h  move.cpp  move.h
src/client/gui/docsbrowser/: docsbrowser.cpp  docsbrowser.h  docwidget.cpp  docwidget.h  docwidget_folder.cpp  docwidget_folder.h
src/client/gui/edit/: edit.cpp  edit.h
src/client/gui/editor/: texteditor.cpp  texteditor.h  texteditor.ui
src/client/gui/landing/: landing.cpp  landing.h
src/client/gui/login/: login.cpp  login.h  login.ui
src/client/gui/other/: Cursor.h  document.cpp  document.h  docwidget.cpp  docwidget.h  docwidget.ui  errordialog.ui  user.cpp  user.h
src/client/gui/registration/: edit.cpp  edit.h  edit.ui  record.cpp  record.h  record.ui  registration.cpp  registration.h
src/client/gui/res/: res.qrc
src/client/gui/texteditor/: color_generator.cpp  color_generator.h  comment_widget.cpp  comment_widget.h  cursor.cpp  cursor.h  item_widget.cpp  item_widget.h  menu_options.cpp  menu_options.h  remote_user.cpp  remote_user.h  text_edit.cpp  text_edit.h  texteditor.cpp  texteditor.h  texteditor_comments.cpp  texteditor_crdt.cpp  user_widget.cpp  user_widget.h
src/client/gui/ui/: dialog_confirm.ui  dialog_connect.ui  dialog_details.ui  dialog_find.ui  dialog_info.ui  dialog_move.ui  dialog_text.ui  dock_options.ui  docsbrowser.ui  docwidget.ui  docwidget_folder.ui  edit.ui  iconSelector.ui  landing.ui  login.ui  logout_options.ui  record.ui  registration.ui  texteditor.ui  texteditor_comment.ui  texteditor_connectedUser.ui  texteditor_home.ui  texteditor_options.ui
src/client/gui/ui/resources/: res.qrc  texteditor.ui
src/client/stub/: CMakeLists.txt  ColorGenerator.cpp  ColorGenerator.h  Cursor.cpp  Cursor.h  QTextEditImpl.h  TextEdit.cpp  TextEdit.h  declarations.h  errordialog.cpp  errordialog.h  errordialog.ui  fileselector.cpp  fileselector.h  fileselector.ui  guiwrapper.cpp  guiwrapper.h  guiwrapper_tests.cpp  landing.cpp  landing.h  landing.ui  login.cpp  login.h  login.ui  main.cpp  resources.qrc
src/client/test/: CMakeLists.txt  TextEdit.cpp  TextEdit.h  main.cpp  prova_crdt.h  prova_file.h  prova_fselement.h  prova_image.h  prova_message.h  prova_misc.h  prova_server.h  prova_textedit.h  prove.h  resources.qrc  texteditqt.cpp  texteditqt.h  tmp.cpp  tmp.h
src/server/: CMakeLists.txt  FSElement_db.cpp  FSElement_db.h  SharedLink.cpp  SharedLink.h  client.cpp  client.h  client_manager.cpp  client_manager.h  dependencies.h  disk_manager.cpp  disk_manager.h  errors.h  main.cpp  message_manager.cpp  message_manager.h  server_message_parser.cpp  server_message_parser.h  server_message_processor.cpp  server_message_processor.h  server_message_processor_REVIEW.cpp  session.cpp  session.h  sys.cpp  sys.h  user.cpp  user.h
src/server/io_thread/: in_thread.cpp  in_thread.h  io_thread.cpp  io_thread.h  out_thread.cpp  out_thread.h
src/server/persistence/: db.cpp  db.h  lazy.h  lazylist.h  persistence.h  persistence_global.h  persistent.h  sqlexception.h
src/server/test/: test_fs.h  test_socket.h  test_socket.py  test_user.h
windows/: build_client.bat  build_server.bat  build_stubClient.bat  build_testClient.bat  start_client.bat  start_server.bat  start_stubClient.bat  start_testClient.bat
(+59 files in other folders)
